--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.14"
   }
 }
