--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.24.0",
     "concurrently": "^6.3.0",
     "cors": "^2.8.5",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
