--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm start\" \"cd backend && nodemon index.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "both": "concurrently \"npm start\" \"nodemon Backend/index.js\""
+    "both": "concurrently \"npm start\" \"cd backend && nodemon index.js\""
   },
   "eslintConfig": {
     "extends": [
