--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "concurrently \"npm start\" \"cd backend && nodemon index.js\"",
+    "start": "concurrently \"npm start\" \"cd Backend && nodemon index.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
