--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,11 +2,11 @@
   "name": "icinema-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
-  },
+  "main": "server.js",
+  "scripts":{
+    "start":"nodemon server.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install      --prefix client && npm run build --prefix client"
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
